--- a/weatherApp/templates/main/index.html
+++ b/weatherApp/templates/main/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class= "navbar-expand-lg fixed-top navbar-dark bg-dark">
         <div class= "container">
-            <a href="../" class="navbar-brand">Weather App<span style ="color:rgb(39,117,161);">
-                <strong> - Django Framework </strong>
+            <a href="../" class="navbar-brand"><h3>Weather App</h3><span style ="color:rgb(39,117,161);">
+                
             </span></a>
             <a href="http://openweathermap.org" class="nav-brand" style='text-align: right'><h6  style='text-align: right' >OpenWeather - Get your API</h6></a>
            
@@ -24,9 +24,9 @@
     <br/><br/><br>
     <div id = "jumbotron" class="jumbotron" style="text-align: center; margin-top: -50px;">
     <h1 class = "display-5" style ="color:rgb(38, 173, 20);">Weather web application</h1>
-    <h5>Using Django framework</h5>
+    
 
-    <img src ="{% static 'images/weather3.jpg' %}" class="image" style="width:100px; margin-bottom:-50px; "></img>
+    <img src ="{% static 'images/weather3.jpg' %}" class="image" style="width:150px; margin-bottom:-50px; "></img>
     </div>
  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
      <form method="post" class ="col-md">
